# Object-Identification

./: README.md
App_object_identification_section3/: CMakeLists.txt  dialog.cpp  dialog.h  mybutton.cpp  mybutton.h
App_object_identification_section6/: CMakeLists.txt  main.cpp  main.qml
suite_object_identification_section2/: suite.conf
suite_object_identification_section2/shared/scripts/: names.py
suite_object_identification_section2/tst_object_map_creation/: test.py
suite_object_identification_section2/tst_object_map_creation/verificationPoints/: VP1
suite_object_identification_section2/tst_object_map_edition/: test.py
suite_object_identification_section3/: suite.conf
suite_object_identification_section3/shared/scripts/: names.py
suite_object_identification_section3/tst_methods/: test.py
suite_object_identification_section3/tst_properties/: test.py
suite_object_identification_section4/: suite.conf
suite_object_identification_section4/shared/scripts/: names.py
suite_object_identification_section4/tst_with_wildcard/: test.py
suite_object_identification_section4/tst_without_wildcard/: test.py
suite_object_identification_section5/: suite.conf
suite_object_identification_section5/shared/scripts/: names.py
suite_object_identification_section5/tst_using_modified_descriptor/: test.py
suite_object_identification_section6/: suite.conf
suite_object_identification_section6/shared/scripts/: names.py
suite_object_identification_section6/tst_occurences/: test.py
suite_object_identification_section6/tst_occurences/verificationPoints/: VP1
